# backend/soat/src/main/java/br/com/postech/soat/customer/core/domain/model/Customer.java
@@ -1,0 +1,63 @@
+package br.com.postech.soat.customer.core.domain.model;
+
+import java.util.UUID;
+
+public class Customer {
+
+    private UUID id;
+    private String name;
+    private String cpf;
+    private String email;
+    private String phone;
+
+    public Customer() {
+    }
+
+    public Customer(UUID id, String name, String cpf, String email, String phone) {
+        this.id = id;
+        this.name = name;
+        this.cpf = cpf;
+        this.email = email;
+        this.phone = phone;
+    }
+
+    public UUID getId() {
+        return id;
+    }
+
+    public void setId(UUID id) {
+        this.id = id;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public String getCpf() {
+        return cpf;
+    }
+
+    public void setCpf(String cpf) {
+        this.cpf = cpf;
+    }
+
+    public String getEmail() {
+        return email;
+    }
+
+    public void setEmail(String email) {
+        this.email = email;
+    }
+
+    public String getPhone() {
+        return phone;
+    }
+
+    public void setPhone(String phone) {
+        this.phone = phone;
+    }
+}
